# openhug

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY_AUDIT.md
.github/workflows/: test.yml  update-previews.yml
crates/openhug-cli/: Cargo.toml
crates/openhug-cli/src/: lib.rs  main.rs
crates/openhug-cli/tests/: integration.rs
crates/openhug-server/: Cargo.toml
crates/openhug-server/src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  storage.rs
crates/openhug-server/tests/: api.rs
crates/openhug-server/tests/common/: mod.rs
migrations/: 0001_initial.sql  0002_security_fixes.sql  0003_user_theme.sql
plans/: multi-server-cli.md
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: auth.tsx  brand.tsx  explore.tsx  new-repository.tsx  onboarding.tsx  shell.tsx
web/components/files/: file-create-page.tsx  file-edit-page.tsx  file-page-shell.tsx  file-view-page.tsx
web/components/repo/: public-page.tsx  repository-page.tsx  workspace.tsx
web/components/settings/: admin-panel.tsx  general-panel.tsx  settings-page.tsx  token-panel.tsx
web/components/ui/: alert.tsx  button.tsx  field.tsx  input.tsx  popover.tsx  select.tsx
web/hooks/: use-copied.ts
web/lib/: api.ts  authz.ts  files.ts  format.ts  repo-routing.ts  types.ts  utils.ts
web/scripts/: capture-previews.cjs
