[workspace]
members = ["crates/openhug-server", "crates/openhug-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/openhug/openhug"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
http = "1.3"
mime_guess = "2.0"
object_store = { version = "0.14", features = ["aws"] }
password-auth = "1.0"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
walkdir = "2.5"

