[package]
name = "openhug-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openhug"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
walkdir.workspace = true

